change alt text
put the alt text, missing alt text.

--- a/download-apps.html
+++ b/download-apps.html
@@ -19,8 +19,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Download Workep on the apps store organize anything! And enjoy on your Androind or IOS. Workep is available on all your devices. Try for free today! ">
-  <meta name="keywords" content="Google Apps, G Suite, projects, management, tasks, collaboration, integrate, automate, Time Tracker, Gantt Chart, Budget, Tracker, files, Google Drive, Calendar,">
+  <meta name="description" content="Download Workep on the apps store organize anything! And enjoy on your Androind or IOS. Workep is available on all your devices. Try for free today! ">         
   <link rel="author" href="https://workep.com" />
   <!-- FB Meta tags -->
   <meta property="og:title" content="Workep: Rebuilding the project management experience"/>
@@ -119,7 +118,7 @@
         </div>
       </div>
       <div class="col-md-6 downloadapp-heading-controller">
-        <h2>Manage your Projects from anywhere.</h2>
+        <h1 style="font-size: 3rem!important;"><strong>Manage your Projects from anywhere.</strong></h1>  
         <h5>Get the Workep Apps for cross enterprise collaboration on the go.</h5>
         <div class="googlepay-appstore-holder">
           <a href="https://apps.apple.com/app/id1438404215"><img src="images/appstore@3x.png" alt="App Store" style="max-width: 200px !important;"></a>
@@ -137,7 +136,7 @@
     <div class="container">
       <div class="foot_top_row">
         <div class="foot1">
-          <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt=""></a>
+          <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Workep Logo"></a>
           <p>©2020 Workep,Inc. All rights reserved <br>
             <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
           </p>
@@ -184,8 +183,8 @@
         <div class="foot5">
           <h4>Contact</h4>
           <ul class="soc_link">
-             <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt=""></a></li>
-             <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt=""></a></li>
+             <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="Twitter Contact"></a></li>
+             <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail Contact"></a></li>
           </ul>
         </div>
       </div>
