--- a/es/descargar-apps.html
+++ b/es/descargar-apps.html
@@ -8,12 +8,6 @@
     <link rel="canonical" href="https://workep.com/es/descargar-apps.html"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
-    <!-- Google indicator for language  -->
-    <link rel=“alternate” hreflang=“en” href=“https://workep.com/” />
-    <link rel=“alternate” hreflang=“es” href=“https://workep.com/es/es.html” />
-    <link rel=“canonical” href=“https://workep.com/es/es.html” />
-
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.../../../js/'});var f=d.getElementsByTagName(s)[0],
@@ -27,7 +21,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="La experiencia de gestión de proyectos más rápida para la colaboración entre empresas. Integración con G Suite, diagramas de Gantt, registro de tiempo, presupuesto y más.">
-    <meta name="keywords" content="Google Apps, G Suite, proyectos, administración, tareas, colaboración, integración, automatización, registro de tiempo, diagramas de Gantt, presupuesto, rastreador, archivos, Google Drive, Calendario,">
     <link rel="author" href="https://workep.com" />
     <!-- FB Meta tags -->
     <meta property="og:title" content="Workep: reconstruyendo la experiencia de gestión de proyectos"/>
@@ -125,7 +118,7 @@
         </div>
       </div>
       <div class="col-md-6 downloadapp-heading-controller">
-        <h2>Gestiona tus proyectos desde cualquier lugar.</h2>
+        <h1 style="font-size: 3rem!important;"><strong>Gestiona tus proyectos desde cualquier lugar.</strong></h1>    
         <h5>Descarga las aplicaciones de Workep para colaborar más rápido y simple.</h5>
         <div class="googlepay-appstore-holder">
           <a href="https://apps.apple.com/app/id1438404215"><img src="../images/appstore@3x.png" alt="App Store" style="max-width: 200px !important;"></a>
