--- a/es/hecho-para-google.html
+++ b/es/hecho-para-google.html
@@ -91,7 +91,6 @@
                    <!--<li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>-->
                 </ul>
               </li>
-
              <li class="loginbtn"><a href="https://app.workep.com/login">INICIAR SESIÓN</a></li>
 
 
@@ -112,7 +111,7 @@
       </div>
       <div class="col-md-7 madeforgoogle_banner_R ml-auto">
         <div class="madeforgoogle_banner_box">
-          <h2>Gestión de Proyectos Google #1</h2>
+         <h1 style="font-size: 33px!important;"><strong>Gestión de Proyectos Google #1</strong></h1>     
          <p>Con un solo clic puedes convertir G Suite en una única herramienta de colaboración. Crea documentos de Google, eventos de calendario, agrega contactos e integra Gmail, todo sin conocimientos técnicos.</p>
         </div>
          <div class="joinworkep_btns">
