--- a/es/precios.html
+++ b/es/precios.html
@@ -120,7 +120,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <h2>Encuentra el plan<br>ideal para ti</h2>
+        <h1 style="font-size:48px"><strong>Encuentra el plan<br>ideal para ti</strong></h1>  
         <p>Lo mantenemos simple y asequible. Lo que ves es<br>lo que obtienes - no creemos en precios ocultos.</p>
         <a href="https://app.workep.com/login" class="starttrial_btn">Empieza tu prueba gratuita de 15 días</a>
       </div>
