--- a/es/producto.html
+++ b/es/producto.html
@@ -106,7 +106,7 @@
 <div class="joinworkep common_gap product_banner">
     <div class="container">
       <div class="section_title">
-         <h2>¡La colaboración nunca ha sido tan fácil!</h2>
+         <h1 style="font-size:48px;"><strong>¡La colaboración nunca ha sido tan fácil!</strong></h1>
       </div>
       <p>Bienvenido a Workep: la herramienta de colaboración entre empresas que es agradable, fácil de usar
 y totalmente integrado dentro de G Suite.</p>
