--- a/es/socios.html
+++ b/es/socios.html
@@ -113,7 +113,7 @@
         </div>
       </div>
       <div class="col-md-6 partner_banner_rt">
-        <h2>Crece tu negocio más rápido con Workep</h2>
+        <h1 style="font-size:48px"><strong>Crece tu negocio más rápido con Workep</strong></h1>    
         <h4>Nuestro mantra #HMD HAZ MÁS DINERO</h4>
         <p>Mejora tu cartera y la adopción de G Suite al ofrecer a tus clientes actuales una nueva herramienta de gestión de proyectos. Rápida, fácil de usar y totalmente integrada con G Suite.</p>
        <a href="https://projectmanagement.workep.com/become-a-partner" class="starttrial_btn">CONVIÉRTETE EN SOCIO</a>
