--- a/es/workep-para-educacion.html
+++ b/es/workep-para-educacion.html
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="col-md-7 partner_banner_rt">
-        <h2>Gestión de proyectos para estudiantes y profesores</h2>
+        <h1 style="font-size:48px"><strong>Gestión de proyectos para estudiantes y profesores</strong></h1>
         <h4>#WorkepForEducation</h4>
         <p>Habilita la colaboración en el aula de clase con Workep. Facilita el trabajo conjunto entre estudiantes y profesores brindando una plataforma totalmente integrada con Google for Education.</p>
        <a href="#url" class="starttrial_btn">Conoce más sobre Workep for Education</a>
@@ -135,19 +135,19 @@
             <li>
               <div class="collaboration_person">
                 <span class="collaboration_person_title">#Tú</span>
-                <figure><img src="../images/you.png" alt=""></figure>
+                <figure><img src="../images/you.png" alt="student"></figure>
               </div>
             </li>
             <li>
               <div class="collaboration_person">
                 <span class="collaboration_person_title">#TuProfesor</span>
-                <figure><img src="../images/your_teacher.png" alt=""></figure>
+                <figure><img src="../images/your_teacher.png" alt="your teacher"></figure>
               </div>
             </li>
             <li>
               <div class="collaboration_person">
                 <span class="collaboration_person_title">#TuCompañero</span>
-                <figure><img src="../images/your_classmate.png" alt=""></figure>
+                <figure><img src="../images/your_classmate.png" alt="classmate"></figure>
               </div>
             </li>
           </ul>
@@ -158,13 +158,13 @@
 
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="../images/collab_image1.jpg" alt="">
+                  <img src="../images/collab_image1.jpg" alt="Dashboard 1">
                 </div>
                 <div class="carousel-item">
-                 <img src="../images/collab_image2.jpg" alt="">
+                 <img src="../images/collab_image2.jpg" alt="Dashboard 2">
                 </div>
                 <div class="carousel-item">
-                  <img src="../images/collab_image3.jpg" alt="">
+                  <img src="../images/collab_image3.jpg" alt="Dashboard 3">
                 </div>
               </div>
 
@@ -288,7 +288,7 @@
           <div class="col-md-4">
             <div class="addi_resource_box">
               <figure>
-                <img src="../images/price_ic2.png" alt="">
+                <img src="../images/price_ic2.png" alt="person user workep">
               </figure>
               <h3>Universitarios</h3>
                <div class="pricing_member_bot">
@@ -370,7 +370,7 @@
                 </div>
                 <div class="flexiblity_testi_img">
                   <figure>
-                    <img src="../images/peoplefaces/javier.jpeg" alt="">
+                    <img src="../images/peoplefaces/javier.jpeg" alt="Javier user">
                   </figure>
                 </div>
 
