--- a/made-for-google.html
+++ b/made-for-google.html
@@ -103,12 +103,12 @@
     <div class="row">
       <div class="col-md-5 madeforgoogle_banner_L">
         <div class="banner_seclft">
-          <img src="images/google_banner_im1.png" alt="">
+          <img src="images/google_banner_im1.png" alt="Apps for Google">
         </div>
       </div>
       <div class="col-md-7 madeforgoogle_banner_R ml-auto">
         <div class="madeforgoogle_banner_box">
-          <h2>#1 Project Management for Google</h2>
+            <h1 style="font-size:33px!important"><strong>#1 Project Management for Google</strong></h1>
          <p>With a single click, you can turn all of G Suite into a single collaboration tool. Create Google docs, Calendar events, add Contacts, and integrate Gmail, without technical knowledge. </p>
         </div>
          <div class="joinworkep_btns">
@@ -141,29 +141,29 @@
     </div>
     <div class="missing_half_gsuit_bot">
       <div class="missing_half_gsuit_im">
-        <img src="images/gsuit_missing_hlf_im.png" alt="">
+        <img src="images/gsuit_missing_hlf_im.png" alt="points">
         <a href="#url" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a>
       </div>
       <div class="missing_half_gsuit_ic1 wow swing" data-wow-delay="1s" data-wow-duration="2s">
-        <img src="images/sinup_ic1.png" alt="">
+        <img src="images/sinup_ic1.png" alt="e-mail">
       </div>
       <div class="missing_half_gsuit_ic2 wow swing" data-wow-delay="1s" data-wow-duration="2s">
-        <img src="images/sinup_ic2.png" alt="">
+        <img src="images/sinup_ic2.png" alt="sheets google">
       </div>
       <div class="missing_half_gsuit_ic3 wow swing" data-wow-delay="1s" data-wow-duration="2s">
-        <img src="images/sinup_ic3.png" alt="">
+        <img src="images/sinup_ic3.png" alt="Google Calendar">
       </div>
       <div class="missing_half_gsuit_ic4 wow swing" data-wow-delay="1s" data-wow-duration="2s">
-        <img src="images/sinup_ic4.png" alt="">
+        <img src="images/sinup_ic4.png" alt="Google presentations">
       </div>
       <div class="missing_half_gsuit_ic5 wow swing" data-wow-delay="1s" data-wow-duration="2s">
-        <img src="images/sinup_ic5.png" alt="">
+        <img src="images/sinup_ic5.png" alt="Google Docs">
       </div>
       <div class="missing_half_gsuit_ic6 wow swing" data-wow-delay="1s" data-wow-duration="2s">
-        <img src="images/sinup_ic6.png" alt="">
+        <img src="images/sinup_ic6.png" alt="Google Drive">
       </div>
       <div class="missing_half_gsuit_ic7 wow swing" data-wow-delay="1s" data-wow-duration="2s">
-        <img src="images/sinup_ic7.png" alt="">
+        <img src="images/sinup_ic7.png" alt="Google Contacts">
       </div>
 
     </div>
@@ -174,7 +174,7 @@
        <div class="section_title">
           <h2>Gmail integration & Add-on <br>Turn emails into tasks</h2>
           <div class="addon_img wow bounceInUp" data-wow-delay="0.3" data-wow-duration="1s">
-            <img src="images/gmail_addon.png" alt="">
+            <img src="images/gmail_addon.png" alt="gmail Add-On">
           </div>
           <p>Send the content of an email over to Workep, with an assignee and due date,<br> without leaving your Gmail inbox.</p>
         </div>
@@ -245,7 +245,7 @@
        <div class="section_title">
           <h2>Google Drive <br>Quick access and centralization</h2>
           <div class="addon_img wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
-            <img src="images/google_drive_ic.png" alt="">
+            <img src="images/google_drive_ic.png" alt="Google Drive icone">
           </div>
           <p>Create Google Docs directly from your tasks in Workep. Add Drive documents to your <br> tasks. Easily find the documents you need for a specific task without wasting time.</p>
         </div>
@@ -275,12 +275,12 @@
           <div class="google_drive_tab_con resp-tabs-container">
             <div class="google_drive_tab_im">
 
-                <img src="images/google_drive_slide3.png" alt="">
+                <img src="images/google_drive_slide3.png" alt="Google drive slide">
 
             </div>
             <div class="google_drive_tab_im">
 
-                <img src="images/google_drive_slide2.png" alt="">
+                <img src="images/google_drive_slide2.png" alt="Google Drive slide 2">
 
             </div>
           </div>
@@ -312,27 +312,27 @@
                   </div>
                   <div class="google_quick_slider google_quick_slider_nav">
                       <a class="google_quick_slide" href="#url">
-                        <img src="images/google_proj_im1.png" alt="">
+                        <img src="images/google_proj_im1.png" alt="made for Google slides 1">
                         <span class="google_quick_slide_title">#Rebranding</span>
                       </a>
                       <a class="google_quick_slide" href="#url">
-                        <img src="images/google_proj_im2.png" alt="">
+                        <img src="images/google_proj_im2.png" alt="made for Google slides 2">
                         <span class="google_quick_slide_title">#Development</span>
                       </a>
                       <a class="google_quick_slide" href="#url">
-                        <img src="images/google_proj_im3.png" alt="">
+                        <img src="images/google_proj_im3.png" alt="made for Google slides 3">
                         <span class="google_quick_slide_title">#Marketing</span>
                       </a>
                       <a class="google_quick_slide" href="#url">
-                        <img src="images/google_proj_im1.png" alt="">
+                        <img src="images/google_proj_im1.png" alt="made for Google slides 4">
                         <span class="google_quick_slide_title">#Rebranding</span>
                       </a>
                       <a class="google_quick_slide" href="#url">
-                        <img src="images/google_proj_im2.png" alt="">
+                        <img src="images/google_proj_im2.png" alt="made for Google slides 5">
                         <span class="google_quick_slide_title">#Development</span>
                       </a>
                       <a class="google_quick_slide" href="#url">
-                        <img src="images/google_proj_im3.png" alt="">
+                        <img src="images/google_proj_im3.png" alt="made for Google slides 6">
                         <span class="google_quick_slide_title">#Marketing</span>
                       </a>
 
@@ -342,22 +342,22 @@
               <div class="col-lg-5 google_quick_project_im">
                 <div class="google_quick_slider_content">
                     <div class="google_quick_slider_im">
-                      <img src="images/project_right_im.png" alt="">
+                      <img src="images/project_right_im.png" alt="project dashboard 1">
                     </div>
                     <div class="google_quick_slider_im">
-                      <img src="images/project_right_im.png" alt="">
+                      <img src="images/project_right_im.png" alt="project dashboard 1">
                     </div>
                     <div class="google_quick_slider_im">
-                      <img src="images/project_right_im.png" alt="">
+                      <img src="images/project_right_im.png" alt="project dashboard 1">
                     </div>
                      <div class="google_quick_slider_im">
-                      <img src="images/project_right_im.png" alt="">
+                      <img src="images/project_right_im.png" alt="project dashboard 1">
                     </div>
                     <div class="google_quick_slider_im">
-                      <img src="images/project_right_im.png" alt="">
+                      <img src="images/project_right_im.png" alt="project dashboard 1">
                     </div>
                     <div class="google_quick_slider_im">
-                      <img src="images/project_right_im.png" alt="">
+                      <img src="images/project_right_im.png" alt="project dashboard 1">
                     </div>
                 </div>
               </div>
@@ -380,12 +380,12 @@
         <div class="hangout_chat_bot">
           <div class="row">
             <div class="col-lg-7 hangout_chat_botL">
-              <img src="images/google_chat_im.png" alt="">
+              <img src="images/google_chat_im.png" alt="Google Dashboard">
             </div>
             <div class="col-lg-5 hangout_chat_botR">
               <div class="google_chat_title">
                 <div class="google_chat_title_icon">
-                  <img src="images/google-chat.png" alt="">
+                  <img src="images/google-chat.png" alt="Google Chat">
                 </div>
                 <div class="google_chat_title_text">
                   <h3>Google chat</h3>
@@ -429,7 +429,7 @@
        <div class="section_title">
           <h2>Google Cloud <br>Security and backups</h2>
           <div class="addon_img wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
-            <img src="images/google_cloud.png" alt="">
+            <img src="images/google_cloud.png" alt="Google Cloud">
           </div>
           <p>We take the protection of your data  seriously, that's why we host your <br>data in the safest and best tool for storage and backups: G Cloud. </p>
         </div>
@@ -470,7 +470,7 @@
       <div class="container">
         <div class="foot_top_row">
           <div class="foot1">
-            <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt=""></a>
+            <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Logo Workep"></a>
             <p>©2020 Workep,Inc. All rights reserved <br>
               <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
             </p>
@@ -517,8 +517,8 @@
           <div class="foot5">
             <h4>Contact</h4>
             <ul class="soc_link">
-               <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt=""></a></li>
-               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt=""></a></li>
+               <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="Twitter Contact"></a></li>
+               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail Contact"></a></li>
             </ul>
           </div>
         </div>
