--- a/partners.html
+++ b/partners.html
@@ -104,12 +104,12 @@
     <div class="row">
       <div class="col-md-6 partner_banner_lft">
         <div class="banner_seclft">
-          <img src="images/partner_banner_im.png" alt="">
+          <img src="images/partner_banner_im.png" alt="partner banner">
 
         </div>
       </div>
       <div class="col-md-6 partner_banner_rt">
-        <h2>Grow your business faster with Workep</h2>
+        <h1 style="font-size:48px"><strong>Grow your business faster with Workep</strong></h1>  
         <h4>Our mantra #MMM Make More Money!</h4>
         <p>Improve your portfolio and G Suite adoption by offering a new Project Management tool to your existing customers. Fast, easy to use and fully integrated with G Suite.</p>
        <a href="https://projectmanagement.workep.com/become-a-partner" class="starttrial_btn">Become a Partner</a>
@@ -128,7 +128,7 @@
         </div>
         <div class="missing_half_bot">
           <div class="missing_half_bgim">
-            <img src="images/missing-half.png" alt="">
+            <img src="images/missing-half.png" alt="missing half">
           </div>
           <div class="linebar1">
             <span class="linebar wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.4s"></span>
@@ -175,7 +175,7 @@
             <div class="col-md-4">
               <div class="benefits_become_partner_box">
                 <figure>
-                  <img src="images/make-money.png" alt="">
+                  <img src="images/make-money.png" alt="make money">
                 </figure>
                 <div class="benefits_become_partner_con">
                   <h3>Make More Money!</h3>
@@ -186,7 +186,7 @@
             <div class="col-md-4">
               <div class="benefits_become_partner_box">
                 <figure>
-                  <img src="images/complete-offering.png" alt="">
+                  <img src="images/complete-offering.png" alt="complete offering">
                 </figure>
                 <div class="benefits_become_partner_con">
                   <h3>Complete offering</h3>
@@ -197,7 +197,7 @@
            <div class="col-md-4">
               <div class="benefits_become_partner_box">
                 <figure>
-                  <img src="images/training-support.png" alt="">
+                  <img src="images/training-support.png" alt="training support">
                 </figure>
                 <div class="benefits_become_partner_con">
                   <h3>Training and support</h3>
@@ -271,7 +271,7 @@
             <div class="col-md-3 col-6 wow bounceInUp" data-wow-delay="0.4s" data-wow-duration="1s">
               <div class="othercounter_box">
                 <figure>
-                  <img src="images/bulb.png" alt="">
+                  <img src="images/bulb.png" alt="bulb">
                 </figure>
                 <div class="othercounter_box_percent">
                    <span class="countnew">75</span>
@@ -295,7 +295,7 @@
         <div class="col-md-4">
           <div class="addi_resource_box">
             <figure>
-              <img src="images/addi_resource1.png" alt="">
+              <img src="images/addi_resource1.png" alt="add resorces">
             </figure>
             <h3>Program brochure</h3>
             <p>Learn more about the program benefits and requirements</p>
@@ -315,7 +315,7 @@
         <div class="col-md-4">
           <div class="addi_resource_box">
             <figure>
-              <img src="images/addi_resource3.png" alt="">
+              <img src="images/addi_resource3.png" alt="add resorce 3">
             </figure>
             <h3>Onboarding process</h3>
             <p>Learn how we'll work together <br>from day 1</p>
@@ -327,7 +327,7 @@
   </div>
   <div class="join_our_family common_gap">
     <div class="join_our_family_im">
-      <img src="images/join-our-family.jpg" alt="">
+      <img src="images/join-our-family.jpg" alt="unete a nuestra familia">
       <div class="join_our_family_con">
         <h2>Join our family today!</h2>
         <a href="#url" class="signupgoogle"><span>BECOME A PARTNER</span></a>
@@ -350,7 +350,7 @@
     <div class="container">
       <div class="foot_top_row">
         <div class="foot1">
-          <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt=""></a>
+          <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Workep Logo"></a>
           <p>©2020 Workep,Inc. All rights reserved <br>
             <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
           </p>
@@ -397,8 +397,8 @@
         <div class="foot5">
           <h4>Contact</h4>
           <ul class="soc_link">
-             <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt=""></a></li>
-             <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt=""></a></li>
+             <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="Twitter Contact"></a></li>
+             <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail Contact"></a></li>
           </ul>
         </div>
       </div>
