--- a/terms.html
+++ b/terms.html
@@ -102,12 +102,12 @@
     <div class="row">
       <div class="col-md-6">
         <div class="banner_seclft">
-          <img src="images/legal_banner_im2.png" alt="">
+          <img src="images/legal_banner_im2.png" alt="Legal Banner">
 
         </div>
       </div>
       <div class="col-md-6">
-        <h2>This is boring we know! <br>but it is necessary.</h2>
+        <h1 style="font-size:48px!important"><strong>This is boring we know! <br>but it is necessary.</strong></h1>  
         <p>We have prepared a couple clauses to protect you and <br>to protect us. We tried to keep it simple.<br>This agreement is effective: May 25, 2018</p>
        <a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a>
       </div>
@@ -353,11 +353,11 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
     <div class="container">
       <div class="foot_top_row">
         <div class="foot1">
-          <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt=""></a>
+          <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Logo Workep"></a>
           <p>©2020 Workep,Inc. All rights reserved <br>
             <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
           </p>
-          <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love "></i> by Workep</span>
+          <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love"></i> by Workep</span>
         </div>
         <div class="foot2">
           <h4>Product</h4>
@@ -400,8 +400,8 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
         <div class="foot5">
           <h4>Contact</h4>
           <ul class="soc_link">
-             <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt=""></a></li>
-             <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt=""></a></li>
+             <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="Twitter Contact"></a></li>
+             <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail Contact"></a></li>
           </ul>
         </div>
       </div>
