--- a/workep-for-education.html
+++ b/workep-for-education.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Workep For Education</title>    
+  <title>Workep For Education - Keep school work organized</title>    
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">    
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -93,12 +93,12 @@
     <div class="row">
       <div class="col-md-5 partner_banner_lft">
         <div class="banner_seclft">
-          <img src="images/education_banner_im.png" alt="">
+          <img src="images/education_banner_im.png" alt="Education_banner">
 
         </div>
       </div>
       <div class="col-md-7 partner_banner_rt">
-        <h2>Project Management solution for students and teachers </h2>
+          <h1 style="font-size:48px"><strong>Project Management solution for students and teachers </strong></h1>
         <h4>#WorkepForEducation</h4>
         <p>Enable collaboration in the classrom with Workep. Make it easier for students and teachers to work together in group
 projects by providing a platform fully integrated with Google for Education.</p>
@@ -128,7 +128,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
             <li>
               <div class="collaboration_person">
                 <span class="collaboration_person_title">#YourTeacher</span>
-                <figure><img src="images/your_teacher.png" alt=""></figure>
+                <figure><img src="images/your_teacher.png" alt="teacher"></figure>
               </div>
             </li>
             <li>
@@ -145,13 +145,13 @@ projects by providing a platform fully integrated with Google for Education.</p>
 
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/collab_image1.jpg" alt="">
+                  <img src="images/collab_image1.jpg" alt="Collab dashboards">
                 </div>
                 <div class="carousel-item">
-                 <img src="images/collab_image2.jpg" alt="">
+                 <img src="images/collab_image2.jpg" alt="Collab dashboard 2">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/collab_image3.jpg" alt="">
+                  <img src="images/collab_image3.jpg" alt="Collab dashboard 3">
                 </div>
               </div>
 
@@ -190,7 +190,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
             <div class="col-lg-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
               <div class="project_management_bot_box">
                 <figure>
-                  <img src="images/proj_manage_im1.png" alt="">
+                  <img src="images/proj_manage_im1.png" alt="Templates users">
                 </figure>
                 <div class="project_management_con">
                   <span class="step">1</span>
@@ -203,7 +203,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
             <div class="col-lg-4 wow fadeInRight" data-wow-duration="2s" data-wow-delay="0.5s">
               <div class="project_management_bot_box">
                 <figure>
-                  <img src="images/proj_manage_im2.png" alt="">
+                  <img src="images/proj_manage_im2.png" alt="Google apps">
                 </figure>
                 <div class="project_management_con">
                   <span class="step">2</span>
@@ -216,7 +216,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
            <div class="col-lg-4 wow fadeInRight" data-wow-duration="2s" data-wow-delay="0.5s">
               <div class="project_management_bot_box">
                 <figure>
-                  <img src="images/proj_manage_im3.png" alt="">
+                  <img src="images/proj_manage_im3.png" alt="Project manager">
                 </figure>
                 <div class="project_management_con">
                   <span class="step">3</span>
@@ -234,18 +234,18 @@ projects by providing a platform fully integrated with Google for Education.</p>
   <div class="how_it_works_sec common_gap">
     <div class="container">
         <div class="section_title">
-          <h2>How it works <i class="heart_im"><img src="images/heart_im.png" alt=""></i></h2>
+          <h2>How it works <i class="heart_im"><img src="images/heart_im.png" alt="made with love"></i></h2>
           <p>Students all over the world are using Workep for their school projects. Here are some use cases:</p>
         </div>
         <div class="how_it_works_slides">
           <div class="how_it_works_slide">
-            <img src="images/how_works_im1.png" alt="">
+            <img src="images/how_works_im1.png" alt="Workep Dashboard 1">
           </div>
           <div class="how_it_works_slide">
-            <img src="images/how_works_im2.png" alt="">
+            <img src="images/how_works_im2.png" alt="Workep Dashboard 2">
           </div>
           <div class="how_it_works_slide">
-            <img src="images/how_works_im3.png" alt="">
+            <img src="images/how_works_im3.png" alt="Workep Dashboard 3">
           </div>
         </div>
     </div>
@@ -261,7 +261,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
           <div class="col-md-4">
             <div class="addi_resource_box">
               <figure>
-                <img src="images/price_ic1.png" alt="">
+                <img src="images/price_ic1.png" alt="precio 1">
               </figure>
               <h3>K-12 Students</h3>
               <div class="pricing_member_bot">
@@ -275,7 +275,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
           <div class="col-md-4">
             <div class="addi_resource_box">
               <figure>
-                <img src="images/price_ic2.png" alt="">
+                <img src="images/price_ic2.png" alt="precio 1">
               </figure>
               <h3>College Students</h3>
                <div class="pricing_member_bot">
@@ -289,7 +289,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
           <div class="col-md-4">
             <div class="addi_resource_box">
               <figure>
-                <img src="images/price_ic3.png" alt="">
+                <img src="images/price_ic3.png" alt="old person workep">
               </figure>
               <h3>Staff 50% discount</h3>
                <div class="pricing_member_bot">
@@ -316,10 +316,10 @@ projects by providing a platform fully integrated with Google for Education.</p>
           <!-- Berkeley -->
           <div class="user_edu_box">
             <div class="user_edu_box_logo">
-              <img src="images/berkeley.png" alt="">
+              <img src="images/berkeley.png" alt="berkeley">
             </div>
             <span class="rating_star1">
-                <img src="images/ratings_star.png" alt="">
+                <img src="images/ratings_star.png" alt="ratings stars">
             </span>
             <div class="flexiblity_testi">
 
@@ -333,7 +333,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
                 </div>
                 <div class="flexiblity_testi_img">
                   <figure>
-                    <img src="images/peoplefaces/sibyl.png" alt="">
+                    <img src="images/peoplefaces/sibyl.png" alt="Workep girl user">
                   </figure>
                 </div>
 
@@ -343,10 +343,10 @@ projects by providing a platform fully integrated with Google for Education.</p>
           <!-- EUSA -->
           <div class="user_edu_box">
             <div class="user_edu_box_logo">
-              <img src="images/logos/eusa.png" style="max-width: 30%" alt="">
+              <img src="images/logos/eusa.png" style="max-width: 30%" alt="Logo EUSA">
             </div>
             <span class="rating_star1">
-                <img src="images/ratings_star.png" alt="">
+                <img src="images/ratings_star.png" alt="ratings stars">
             </span>
             <div class="flexiblity_testi">
 
@@ -387,7 +387,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
         <div class="container">
           <div class="foot_top_row">
             <div class="foot1">
-              <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt=""></a>
+              <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Logo Workep"></a>
               <p>©2019 Workep,Inc. All rights reserved <br>
                 <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
               </p>
@@ -434,8 +434,8 @@ projects by providing a platform fully integrated with Google for Education.</p>
             <div class="foot5">
               <h4>Contact</h4>
               <ul class="soc_link">
-                 <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt=""></a></li>
-                 <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt=""></a></li>
+                 <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="Twitter Contact"></a></li>
+                 <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail Contact"></a></li>
               </ul>
             </div>
           </div>
