--- a/es/es.html
+++ b/es/es.html
@@ -771,7 +771,7 @@
           <div class="foot5">
             <h4>Contacto</h4>
             <ul class="soc_link">
-               <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/con_ic2.png" alt="Icono correo"></a></li>
+               <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/con_ic2.png" alt="Contacto en twitter"></a></li>
                <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../images/con_ic3.png" alt="Icono e-mail"></a></li>
             </ul>
           </div>
