--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="The fastest project management experience for cross-enterprise collaboration, G Suite integration, Gantt Charts, Time Tracker, Budget and more. ">
-    <meta name="keywords" content="Google Apps, G Suite, projects, management, tasks, collaboration, integrate, automate, Time Tracker, Gantt Chart, Budget, Tracker, files, Google Drive, Calendar,">
     <link rel="author" href="https://workep.com" />
     <!-- FB Meta tags -->
     <meta property="og:title" content="Workep: Rebuilding the project management experience"/>
@@ -773,7 +772,7 @@
           <div class="foot5">
             <h4>Contact</h4>
             <ul class="soc_link">
-               <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="hastag"></a></li>
+               <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="Twitter contact"></a></li>
                <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail"></a></li>
             </ul>
           </div>
