--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -36,7 +36,7 @@
   <meta name="twitter:description" content="A cross-enterprise collaboration tool that is fast, easy to use and fully integrated within G Suite" />
   <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocialImages/socialmediacover.jpg" />
 
-  <title>Workep: Privacy Policy</title>
+  <title>Privacy, Security terms & Policy settings on Workep</title>
 
   <!-- Page icon -->
   <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
@@ -100,12 +100,12 @@
     <div class="row">
       <div class="col-md-6">
         <div class="banner_seclft">
-          <img src="images/legal_banner_im2.png" alt="">
+          <img src="images/legal_banner_im2.png" alt="Legal banners">
 
         </div>
       </div>
       <div class="col-md-6">
-        <h2>Privacy Policy: Your data privacy <br/> is the most important.</h2>
+        <h1 style="font-size: 48px;"><strong>Privacy Policy: Your data privacy <br/> is the most important.</strong></h1>  
         <p>Our privacy policy will help you understand what information we collect at Workep, how Workep uses it, and what choices you have.
 Effective: May 25, 2018</p>
        <a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a>
@@ -410,11 +410,11 @@ If you join a Team workspace and create a user account, you are a “user,” as
     <div class="container">
       <div class="foot_top_row">
         <div class="foot1">
-          <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt=""></a>
+          <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Logo Workep"></a>
           <p>©2020 Workep,Inc. All rights reserved <br>
             <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
           </p>
-          <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love "></i> by Workep</span>
+          <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love"></i> by Workep</span>
         </div>
         <div class="foot2">
           <h4>Product</h4>
@@ -457,8 +457,8 @@ If you join a Team workspace and create a user account, you are a “user,” as
         <div class="foot5">
           <h4>Contact</h4>
           <ul class="soc_link">
-             <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt=""></a></li>
-             <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt=""></a></li>
+             <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="Twitter Contact"></a></li>
+             <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail Contact"></a></li>
           </ul>
         </div>
       </div>
